// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<button
  className="backlink"
  onClick={[Function]}
>
  &lt;&lt;
</button>
`;

exports[`renders correctly on error page 1`] = `
<button
  className="backlink error-page__back-link"
  onClick={[Function]}
>
  &lt;&lt;
</button>
`;
